# kombi

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  immuInstall  info.json  package.py  pylama.ini  pyproject.toml  runcoverage  runlint  runtest  runtests
.github/workflows/: python-package.yml
data/examples/: sequence.nk
data/examples/LoadMetadata/: loadMetadata.json
data/examples/gafferBlurImageSequence/: config.json
data/examples/publishRenders/: shotRender.json  turntable.json
data/examples/publishTextures/: config.hjson  config.json
data/examples/renders/: shotRender.json  turntable.json
data/examples/textures/: textures.json
data/examples/vendorXPlates/: deliveryConfig.json  ingestConfig.json  ingestConfig.yaml  vendorConfig.json
data/examples/vendorXPlatesInlineInfoCrates/: ingestConfig.yaml
data/tests/: symlink.exr  test.cc  testSeq.0002.exr  testSeq.0007.exr  testSeq.0008.exr  testSeq.0010.exr
data/tests/config/: childTasks.json  dispatcherTest.json  reporterTest.json  test.json
data/tests/tasks/: EchoTask.py  PythonMajorVerTestTask.py  PythonTestTask.py
data/ui/darkstyle/: darkstyle.qss
src/data/tests/: test.exr  testSeq.0003.exr  testSeq.0004.exr  testSeq.0006.exr  video.mov
src/kombi/: Cli.py  EnvModifier.py
src/kombi/Dispatcher/: Dispatcher.py
src/kombi/Task/: Task.py
src/kombiqt/: Resource.py  Style.py
src/kombiqt/Widget/: __init__.py  (+9 more)
test/: BaseTestCase.py  CliTest.py  __init__.py
test/Element/: VarExtractorTest.py
test/InfoCrate/: VarExtractorTest.py
test/Task/: TaskTest.py  __init__.py
test/TaskReporter/: ColumnsTaskReporterTest.py  DetailedTaskReporterTest.py  JsonTaskReporterTest.py  __init__.py
test/TaskWrapper/: Python3TaskWrapperTest.py  PythonTaskWrapperTest.py  __init__.py
test/Template/: TemplateTest.py  __init__.py
test/examples/: GafferBlurImageSequenceTest.py  PublishTexturesTest.py  VendorXPlatesInlineCrawlersTest.py  VendorXPlatesInlineElementsTest.py  VendorXPlatesInlineInfoCratesTest.py  VendorXPlatesTest.py  __init__.py
tests/: BaseTestCase.py  CliTest.py  TemplateTest.py  __init__.py
tests/Crawler/: VarExtractorTest.py
tests/Task/: TaskTest.py
tests/TaskHolder/: __init__.py
tests/TaskReporter/: ColumnsTest.py  DetailedTaskReporterTest.py  DetailedTest.py  JsonTaskReporterTest.py  JsonTest.py  __init__.py
tests/TaskWrapper/: Python2TaskWrapperTest.py  Python2Test.py  Python3TaskWrapperTest.py  Python3Test.py  PythonTaskWrapperTest.py  PythonTest.py  __init__.py
tests/Template/: TemplateTest.py
tests/TemplateProcedure/: DatetimeTest.py  ImageSequenceTest.py  MathTest.py  PathTest.py  SystemTest.py  TextTest.py  VersionTest.py
tests/examples/: GafferBlurImageSequenceTest.py  PublishTexturesTest.py  VendorXPlatesTest.py  __init__.py
(+775 files in other folders)
